# coppc

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/coppc/: __init__.py  coppc.py  tester.py
src/coppc/example/com_emu/: hosts.json  pv_1_2_mn.py  pv_m_n_bess_mn.py
src/coppc/example/emec_emu/pv_1_2_bess/: config_devices.json  config_devices_mn.json  emulator.py
src/coppc/modbus/: modbus_client.py
tests/: __init__.py  test_colinker.py  test_monitor.py
tests/data/: mn_pv_1_2_bess.json
tests/pv_m_n/: config_devices_mininet_local.json  run_device.py  run_devices.py
