[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coppc"
version = "0.1.0"
description = "COCOON PPC"
readme = "README.md"
authors = [
  {name = "Juan Manuel Mauricio", email = "jmmauricio@us.es"}
]
maintainers = [
  {name = "Juan Manuel Mauricio", email = "jmmauricio@us.es"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
]

[project.urls]

bugs = "https://github.com/jmmauricio/coppc/issues"
changelog = "https://github.com/jmmauricio/coppc/blob/master/changelog.md"
homepage = "https://github.com/jmmauricio/coppc"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

